20220320 Office Review Python

--- a/Programming/Python/Python_Basic/위키독스_점프투파이썬/06. 파이썬 프로그래밍 어떻게 시작해야 할까.ipynb
+++ b/Programming/Python/Python_Basic/위키독스_점프투파이썬/06. 파이썬 프로그래밍 어떻게 시작해야 할까.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06-1 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -23,6 +31,300 @@
     "    return result\n",
     "    \n",
     "print(gugu(2))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06-2 3과 5의 배수 합하기기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st: 1000미만의 3과 5의 배수의 합 :  233168\n",
+      "2st: 1000미만의 3과 5의 배수의 합 :  233168\n",
+      "3st: 1000미만의 3과 5의 배수의 합 :  233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question\n",
+    "# --------\n",
+    "# 10 미만의 자연수에서 3과 5의 배수를 구하면 3, 5, 6, 9이다. 이들의 총합은 23이다.\n",
+    "# 1000 미만의 자연수에서 3의 배수와 5의 배수의 총합을 구하라.\n",
+    "# ---------------------------------------------------------------------------\n",
+    "\n",
+    "# 1st\n",
+    "# ---\n",
+    "def double(n):\n",
+    "    result = []\n",
+    "    for i in range(1, 1000):\n",
+    "        if i % n == 0:\n",
+    "            result.append(i)\n",
+    "    return result        \n",
+    "\n",
+    "aa = double(3)\n",
+    "bb = double(5)\n",
+    "aa.extend(bb)\n",
+    "cc = set(aa)\n",
+    "print('1st: 1000미만의 3과 5의 배수의 합 : ', sum(cc))\n",
+    "\n",
+    "\n",
+    "# 2st\n",
+    "# ---\n",
+    "\n",
+    "def double(a, b):\n",
+    "    result = []\n",
+    "    sum = 0\n",
+    "    for i in range(1, 1000):\n",
+    "        if i % a == 0:\n",
+    "            result.append(i)\n",
+    "        if i % b == 0:\n",
+    "            result.append(i)\n",
+    "    for j in set(result):\n",
+    "        sum += j\n",
+    "        \n",
+    "    return sum\n",
+    "\n",
+    "print('2st: 1000미만의 3과 5의 배수의 합 : ', double(3, 5))\n",
+    "\n",
+    "\n",
+    "# 3st\n",
+    "# ---\n",
+    "\n",
+    "result = 0\n",
+    "for n in range(1, 1000):\n",
+    "    if n % 3 == 0 or n % 5 == 0:\n",
+    "        result += n\n",
+    "\n",
+    "print('3st: 1000미만의 3과 5의 배수의 합 : ', result)        \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06-3 게시판 페이징하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st: 필요한 page 수:  7\n",
+      "2st: 필요한 page 수:  7\n",
+      "2st: 필요한 page 수:  1\n",
+      "3st: 필요한 page 수:  7\n",
+      "3st: 필요한 page 수:  1\n",
+      "3st: 필요한 page 수:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question\n",
+    "# --------\n",
+    "# 게시물의 총 건수와 한 페이지에 보여 줄 게시물 수를 입력으로 주었을 때 총 페이지 수를 출력\n",
+    "# -----------------------------------------------------------------------------------\n",
+    "# 총건수 : 33 (m)\n",
+    "# 한 페이지 : 5 (n)\n",
+    "# 함수 : get_total_page\n",
+    "\n",
+    "# 1st\n",
+    "# ---\n",
+    "import math\n",
+    "def get_total_page(m, n):\n",
+    "    return math.ceil(m / n)\n",
+    "\n",
+    "print('1st: 필요한 page 수: ', get_total_page(33, 5))\n",
+    "\n",
+    "# 2st\n",
+    "# ---\n",
+    "def get_total_page1(m, n):\n",
+    "    if m < n:\n",
+    "        page = 1\n",
+    "    else:\n",
+    "        page = m // n\n",
+    "        remain = m % n\n",
+    "        if remain > 0:\n",
+    "            page = page+1\n",
+    "            \n",
+    "    return page\n",
+    "\n",
+    "print('2st: 필요한 page 수: ', get_total_page(33, 5))\n",
+    "print('2st: 필요한 page 수: ', get_total_page(2, 5))\n",
+    "\n",
+    "\n",
+    "# 3st\n",
+    "# ---\n",
+    "def get_total_page1(m, n):\n",
+    "    if m % n == 0:\n",
+    "        return m // n\n",
+    "    else:\n",
+    "        return m // n + 1\n",
+    "\n",
+    "print('3st: 필요한 page 수: ', get_total_page(33, 5))\n",
+    "print('3st: 필요한 page 수: ', get_total_page(2, 5))\n",
+    "print('3st: 필요한 page 수: ', get_total_page(0, 5))\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06-4 간단한 메모장 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 간단한 메모장 만들기\n",
+    "# ------------------\n",
+    "# - 필요한 기능은? 메모 추가하기, 메모 조회하기\n",
+    "# - 입력 받는 값은? 메모 내용, 프로그램 실행 옵션\n",
+    "# - 출력하는 값은? memo.txt\n",
+    "# --------------------------------------------    \n",
+    "# memo.py -a \"메모내용\"\n",
+    "# memo.py -i "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting c:/temp/test/memo.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile c:/temp/test/memo.py\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "args = sys.argv[1:]\n",
+    "if args[0] == '-a':\n",
+    "    with open('c:/temp/test/memo.txt', 'a') as f:\n",
+    "        f.write(args[1]+'\\n')\n",
+    "\n",
+    "elif args[0] == '-i':\n",
+    "    with open('c:/temp/test/memo.txt', 'r') as f:\n",
+    "        print(f.read())\n",
+    "else:\n",
+    "    print('옵션 에러')        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting c:/temp/test/memo1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile 'c:/temp/test/memo1.py'\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "option = sys.argv[1]\n",
+    "\n",
+    "if option == '-a':\n",
+    "    memo = sys.argv[2]\n",
+    "    with open('c:/temp/test/memo.txt', 'a') as f:\n",
+    "        f.write(memo)\n",
+    "        f.write('\\n')\n",
+    "elif option == '-v':\n",
+    "    with open('c:/temp/test/memo.txt', 'r') as f:\n",
+    "        memo = f.read()\n",
+    "        print(memo)\n",
+    "else:\n",
+    "    print('Usage: python memo.py [-v] [-a memo]')        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06-5 탭을 4개의 공백으로 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 탭을 4개의 공백으로 바꾸기\n",
+    "# ------------------------\n",
+    "# 이번에는 문서 파일을 읽어서 그 문서 파일 안에 있는 탭(tab)을 공백(space) 4개로 바꾸어 주는 스크립트를 작성해 보자.\n",
+    "# - 필요한 기능은? 문서 파일 읽어 들이기, 문자열 변경하기\n",
+    "# - 입력 받는 값은? 탭을 포함한 문서 파일\n",
+    "# - 출력하는 값은? 탭이 공백으로 수정된 문서 파일\n",
+    "# ----------------------------------------------------------------------------------------------------------\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting c:/temp/test/tab.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile c:/temp/test/tab.py \n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) != 2:\n",
+    "    print('Usage: python tab.py file_name')    \n",
+    "else:\n",
+    "    with open(sys.argv[1], 'r') as f:\n",
+    "        memo = f.read()\n",
+    "        print(memo)\n",
+    "#        new_memo = memo.replace('\\t', '    ')\n",
+    "        new_memo = memo.replace('\\t', '^^^^')\n",
+    "        print(new_memo)\n",
+    "    \n",
+    "    with open(sys.argv[1], 'w') as f:\n",
+    "        f.write(new_memo)\n",
+    "\n"
    ]
   },
   {
