20230321 Office Review Python

--- a/Programming/Python/Python_Basic/위키독스_점프투파이썬/08. 정규표현식.ipynb
+++ b/Programming/Python/Python_Basic/위키독스_점프투파이썬/08. 정규표현식.ipynb
@@ -822,11 +822,399 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 메타 문자"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 앞에서 살펴본 +, *, [], {} 등의 메타문자는 매치가 진행될 때 현재 매치되고 있는 문자열의 위치가 변경된다(보통 소비된다고 표현한다). \n",
+    "# 하지만 이와 달리 문자열을 소비시키지 않는 메타 문자도 있다. \n",
+    "# 이번에는 이런 문자열 소비가 없는(zerowidth assertions) 메타 문자에 대해 살펴보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 4), match='Crow'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# |\n",
+    "# -\n",
+    "# | 메타 문자는 or과 동일한 의미로 사용된다. A|B라는 정규식이 있다면 A 또는 B라는 의미가 된다.\n",
+    "# --------------------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile('Crow|Servo')\n",
+    "m = p.match('CrowHello')\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 4), match='Life'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ^\n",
+    "# -\n",
+    "# $ 메타 문자는 ^ 메타 문자와 반대의 경우이다. 즉 $는 문자열의 끝과 매치함을 의미한다.\n",
+    "# -----------------------------------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "print(re.search('^Life', 'Life is too short'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# $\n",
+    "# -\n",
+    "# ^ 메타 문자는 문자열의 맨 처음과 일치함을 의미한다. \n",
+    "# 앞에서 살펴본 컴파일 옵션 re.MULTILINE을 사용할 경우에는 여러 줄의 문자열일 때 각 줄의 처음과 일치하게 된다.\n",
+    "# -----------------------------------------------------------------------------------------------------\n",
+    "import re\n",
+    "print(re.search('short$', 'Life is too short'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ^ 또는 $ 문자를 메타 문자가 아닌 문자 그 자체로 매치하고 싶은 경우에는 \\^, \\$ 로 사용하면 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \\A\n",
+    "# --\n",
+    "# \\A는 문자열의 처음과 매치됨을 의미한다. ^ 메타 문자와 동일한 의미이지만 re.MULTILINE 옵션을 \n",
+    "# 사용할 경우에는 다르게 해석된다. \n",
+    "# re.MULTILINE 옵션을 사용할 경우 ^은 각 줄의 문자열의 처음과 매치되지만 \\A는 줄과 상관없이 \n",
+    "# 전체 문자열의 처음하고만 매치된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \\Z\n",
+    "# --\n",
+    "# \\Z는 문자열의 끝과 매치됨을 의미한다. 이것 역시 \\A와 동일하게 re.MULTILINE 옵션을 사용할 경우 $ 메타 \n",
+    "# 문자와는 달리 전체 문자열의 끝과 매치된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(3, 8), match='class'>\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \\b\n",
+    "# --\n",
+    "# \\b는 단어 구분자(Word boundary)이다. 보통 단어는 whitespace에 의해 구분된다.\n",
+    "# -------------------------------------------------------------------------\n",
+    "# \\b 메타 문자를 사용할 때 주의해야 할 점이 있다. \n",
+    "# \\b는 파이썬 리터럴 규칙에 의하면 백스페이스(BackSpace)를 의미하므로 백스페이스가 아닌 \n",
+    "# 단어 구분자임을 알려 주기 위해 r'\\bclass\\b'처럼 Raw string임을 알려주는 기호 r을 반드시 붙여 주어야 한다.\n",
+    "# --------------------------------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'\\bclass\\b')\n",
+    "print(p.search('no class at all'))\n",
+    "\n",
+    "# \\bclass\\b 정규식은 앞뒤가 whitespace로 구분된 class라는 단어와 매치됨을 의미한다. \n",
+    "# 따라서 no class at all의 class라는 단어와 매치됨을 확인할 수 있다.\n",
+    "\n",
+    "print(p.search('the declassified algorithm'))\n",
+    "\n",
+    "print(p.search('one subclass is'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<re.Match object; span=(6, 11), match='class'>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \\B\n",
+    "# --\n",
+    "# \\B 메타 문자는 \\b 메타 문자와 반대의 경우이다. 즉 whitespace로 구분된 단어가 아닌 경우에만 매치된다.\n",
+    "# ----------------------------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'\\Bclass\\B')\n",
+    "print(p.search('no class at all'))\n",
+    "\n",
+    "print(p.search('the declassified algorithm'))\n",
+    "\n",
+    "print(p.search('one subclass is'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 그루핑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 9), match='ABCABCABC'>\n",
+      "ABCABCABC\n",
+      "<re.Match object; span=(0, 18), match='park 010-1234-1234'>\n",
+      "<re.Match object; span=(4, 18), match=' 010-1234-1234'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 그루핑\n",
+    "# -----\n",
+    "# ABC 문자열이 계속해서 반복되는지 조사하는 정규식을 작성하고 싶다고 하자. \n",
+    "# 어떻게 해야할까? 지금까지 공부한 내용으로는 위 정규식을 작성할 수 없다. \n",
+    "# 이럴 때 필요한 것이 바로 그루핑(Grouping) 이다.\n",
+    "# -------------------------------------------------------------------\n",
+    "# (ABC)+\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "p = re.compile('(ABC)+')\n",
+    "m = p.search('ABCABCABC OK?')\n",
+    "print(m)\n",
+    "print(m.group())\n",
+    "\n",
+    "\n",
+    "# \\d : [0-9]\n",
+    "# \\s : white space\n",
+    "# \\w : [0-9a-zA-Z_]\n",
+    "# ------------------\n",
+    "p = re.compile(r'\\w+\\s+\\d+[-]\\d+[-]\\d+')\n",
+    "m = p.search('park 010-1234-1234')\n",
+    "print(m)\n",
+    "\n",
+    "p = re.compile(r'\\s+\\d+[-]\\d+[-]\\d+')\n",
+    "m = p.search('park 010-1234-1234')\n",
+    "print(m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 18), match='park 010-1234-1234'>\n",
+      "park\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \\w+\\s+\\d+[-]\\d+[-]\\d+은 이름 + \" \" + 전화번호 형태의 문자열을 찾는 정규식이다. \n",
+    "# 그런데 이렇게 매치된 문자열 중에서 이름만 뽑아내고 싶다면 어떻게 해야 할까?\n",
+    "\n",
+    "# 보통 반복되는 문자열을 찾을 때 그룹을 사용하는데, 그룹을 사용하는 보다 큰 이유는 위에서 \n",
+    "# 볼 수 있듯이 매치된 문자열 중에서 특정 부분의 문자열만 뽑아내기 위해서인 경우가 더 많다.\n",
+    "\n",
+    "# 위 예에서 만약 \"이름\" 부분만 뽑아내려 한다면 다음과 같이 할 수 있다.\n",
+    "# ---------------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'(\\w+)\\s+\\d+[-]\\d+[-]\\d+')      \n",
+    "                                                \n",
+    "m = p.search('park 010-1234-1234')\n",
+    "print(m)\n",
+    "print(m.group(1))\n",
+    "\n",
+    "# \\w+ ---> (\\w+)로 변경하면 match 객체의 group(인덱스) 메서드를 사용하여 그루핑된 부분의 문자열만 뽑아낼 수 있음\n",
+    "\n",
+    "# group 메서드의 인덱스는 다음과 같은 의미를 갖는다.\n",
+    "# ----------------------------------------------\n",
+    "# group(인덱스)     설명\n",
+    "# -------------     --------------------------\n",
+    "# group(0)\t        매치된 전체 문자열\n",
+    "# group(1)\t        첫 번째 그룹에 해당되는 문자열\n",
+    "# group(2)\t        두 번째 그룹에 해당되는 문자열\n",
+    "# group(n)\t        n 번째 그룹에 해당되는 문자열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "park 010-1234-1234\n",
+      "park\n",
+      "010-1234-1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 이름과 전화번호 그루핑\n",
+    "# --------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'(\\w+)\\s+(\\d+[-]\\d+[-]\\d+)')      \n",
+    "                                               \n",
+    "m = p.search('park 010-1234-1234')\n",
+    "\n",
+    "print(m.group(0))\n",
+    "print(m.group(1))\n",
+    "print(m.group(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "park 010-1234-5678\n",
+      "park\n",
+      "010\n",
+      "1234\n",
+      "5678\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 전화번호 중에서 국번만 뽑아내고 싶으면 어떻게 해야 할까? 다음과 같이 국번 부분을 또 그루핑하면 된다\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'(\\w+)\\s+(\\d+)[-](\\d+)[-](\\d+)')      \n",
+    "                                               \n",
+    "m = p.search('park 010-1234-5678')\n",
+    "\n",
+    "print(m.group(0))\n",
+    "print(m.group(1))\n",
+    "print(m.group(2))\n",
+    "print(m.group(3))\n",
+    "print(m.group(4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "park 010-1234-5678\n",
+      "park\n",
+      "010-1234-5678\n",
+      "010\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 그루핑 중첩\n",
+    "# ----------\n",
+    "# (\\w+)\\s+((\\d+)[-]\\d+[-]\\d+)처럼 그룹을 중첩되게 사용하는 것도 가능하다. \n",
+    "# 그룹이 중첩되어 있는 경우는 바깥쪽부터 시작하여 안쪽으로 들어갈수록 인덱스가 증가\n",
+    "# ---------------------------------------------------------------------------\n",
+    "import re\n",
+    "\n",
+    "p = re.compile(r'(\\w+)\\s+((\\d+)[-]\\d+[-]\\d+)')      \n",
+    "                                               \n",
+    "m = p.search('park 010-1234-5678')\n",
+    "\n",
+    "print(m.group(0))\n",
+    "print(m.group(1))\n",
+    "print(m.group(2))\n",
+    "print(m.group(3))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 그루핑된 문자열 재참조하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 그루핑된 문자열 재참조하기\n",
+    "# ------------------------"
+   ]
   }
  ],
  "metadata": {
