20230322 Office Review Python

--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/0. 머리말.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/0. 머리말.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 데이비드 M. 비즐리(David Beazley)의 《Practical Python Programming》을 번역한 책입니다."
+    "# 데이비드 M. 비즐리(David Beazley)의 《Practical Python Programming》을 번역한 책입니다.\n",
+    "\n",
+    "# https://wikidocs.net/84384#google_vignette"
    ]
   }
  ],
