--- a/Programming/Python/Python 초급/위키독스_점프투파이썬/02. 파이썬 프로그래밍의 기초_자료형.ipynb
+++ b/Programming/Python/Python 초급/위키독스_점프투파이썬/02. 파이썬 프로그래밍의 기초_자료형.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,9 @@
       "4.1416\n",
       "    3.1416\n",
       "    3.1416\n",
-      "####3.1416\n"
+      "####3.1416\n",
+      "{ and }\n",
+      "3.1416    \n"
      ]
     }
    ],
