--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/0. 머리말.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/0. 머리말.ipynb
@@ -8,15 +8,28 @@
    "source": [
     "# 데이비드 M. 비즐리(David Beazley)의 《Practical Python Programming》을 번역한 책입니다.\n",
     "\n",
-    "# https://wikidocs.net/84384#google_vignette"
+    "# https://wikidocs.net/84384#google_vignette\n",
+    "\n",
+    "# https://github.com/dabeaz-course/practical-python"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
