--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/1. 파이썬 소개.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/1. 파이썬 소개.ipynb
@@ -2428,21 +2428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AA\n",
-      "IBM\n",
-      "CAT\n",
-      "MSFT\n",
-      "GE\n",
-      "MSFT\n",
-      "IBM\n",
-      "Total cost 44671.15\n"
+      "Total cost 44,671.15\n"
      ]
     }
    ],
@@ -2452,23 +2445,41 @@
     "# 이 함수는 파일명을 입력으로 받아 포트폴리오 데이터를 읽고, 포트폴리오의 총 비용을 부동소수점으로 반환한다.\n",
     "\n",
     "def portfolio_cost(filename):\n",
-    "    total_buy_price = 0\n",
-    "    f = open(filename, 'r')\n",
-    "\n",
-    "    headers = next(f)\n",
-    "    for line in f:\n",
-    "        stock_name = line.split(',')[0]\n",
-    "        stock_count = int(line.strip().split(',')[-2])\n",
-    "        stock_buy_price = float(line.strip().split(',')[-1])\n",
-    "\n",
-    "        total_buy_price += stock_count*stock_buy_price \n",
-    "        print(stock_name.replace('\"',''))               # 텍스트인 경우 쌍따옴표가 출력되어 제거\n",
-    "    f.close()        \n",
-    "    return total_buy_price    \n",
+    "    total_cost = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        headers = next(f)\n",
+    "        for line in f:\n",
+    "            nshares = int(line.strip().split(',')[1])\n",
+    "            price = float(line.strip().split(',')[2])\n",
+    "            total_cost += nshares * price\n",
+    "            \n",
+    "    return total_cost    \n",
     "\n",
     "result = portfolio_cost(\"../../data/portfolio.csv\")\n",
     "\n",
-    "print(f'Total cost {result}')"
+    "print(f'Total cost {result:,.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 책에서 제시하는 해답\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''포트폴리오 파일의 총 비용(주식수*가격)을 계산'''\n",
+    "    total_cost = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows)\n",
+    "        for row in rows:\n",
+    "            nshares = int(row[1])\n",
+    "            price = float(row[2])\n",
+    "            total_cost += nshares * price\n",
+    "    return total_cost"
    ]
   },
   {
@@ -2710,7 +2721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2724,9 +2735,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
