--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/2. 데이터로 작업하기.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/2. 데이터로 작업하기.ipynb
@@ -538,6 +538,476 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.2 컨테이너"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 개요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 프로그램에서 많은 수의 객체를 다뤄야할 때가 있다.\n",
+    "\n",
+    "# - 주식 포트폴리오\n",
+    "# - 주식 가격 테이블\n",
+    "# - 세 가지 선택사항이 있다.\n",
+    "\n",
+    "# 리스트(list): 순서가 유지되는(ordered) 데이터.\n",
+    "# 딕셔너리(dict): 순서가 없는(unordered) 데이터.\n",
+    "# 세트(set): 고유한 항목의 집합이며 순서가 없음."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('IBM', 50, 91.3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 컨테이너로서의 리스트\n",
+    "# ---------------------\n",
+    "# 데이터의 순서가 중요할 때는 리스트를 사용하라. 리스트는 어떤 유형의 객체든 담을 수 있음을 명심하라. 예: 튜플의 리스트.\n",
+    "\n",
+    "portfolio = [\n",
+    "    ('GOOG', 100, 490.1),\n",
+    "    ('IBM', 50, 91.3),\n",
+    "    ('CAT', 150, 83.44)\n",
+    "]\n",
+    "\n",
+    "portfolio[0]\n",
+    "portfolio[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 리스트 생성(construction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AA', '100', '32.20']\n",
+      "['IBM', '50', '91.10']\n",
+      "['CAT', '150', '83.44']\n",
+      "['MSFT', '200', '51.23']\n",
+      "['GE', '95', '40.37']\n",
+      "['MSFT', '50', '65.10']\n",
+      "['IBM', '100', '70.44']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('AA', 100, 32.2),\n",
+       " ('IBM', 50, 91.1),\n",
+       " ('CAT', 150, 83.44),\n",
+       " ('MSFT', 200, 51.23),\n",
+       " ('GE', 95, 40.37),\n",
+       " ('MSFT', 50, 65.1),\n",
+       " ('IBM', 100, 70.44)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "records = []  # 빈 리스트로 초기화\n",
+    "\n",
+    "# .append()를 사용해 항목을 추가\n",
+    "records.append(('GOOG', 100, 490.10))\n",
+    "records.append(('IBM', 50, 91.3))\n",
+    "\n",
+    "records\n",
+    "\n",
+    "# 다음은 파일에서 레코드를 읽어 리스트에 채우는 예이다.\n",
+    "records = []\n",
+    "\n",
+    "with open('../../data/portfolio.csv', 'r') as f:\n",
+    "    next(f)\n",
+    "    for line in f:\n",
+    "        row = line.strip().replace('\"', '').split(',')\n",
+    "        print(row)\n",
+    "        records.append((row[0], int(row[1]), float(row[2])))\n",
+    "records\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 컨테이너로서의 딕셔너리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(93.37, 513.25)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 딕셔너리는 빠른 임의 조회(키 이름을 사용)에 유용하다. 예: 주식 가격의 딕셔너리.\n",
+    "prices = {\n",
+    "    'GOOG': 513.25,\n",
+    "    'CAT': 87.22,\n",
+    "    'IBM': 93.37,\n",
+    "    'MSFT': 44.12\n",
+    "}\n",
+    "prices['IBM'], prices['GOOG']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 딕셔너리 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('AXP', 24.85), ('BA', 44.85), ('BAC', 11.27), ('C', 3.72), ('CAT', 35.46), ('CVX', 66.67), ('DD', 28.47), ('DIS', 24.22), ('GE', 13.48), ('GM', 0.75), ('HD', 23.16), ('HPQ', 34.35), ('IBM', 106.28), ('INTC', 15.72), ('JNJ', 55.16), ('JPM', 36.9), ('KFT', 26.11), ('KO', 49.16), ('MCD', 58.99), ('MMM', 57.1), ('MRK', 27.58), ('MSFT', 20.89), ('PFE', 15.19), ('PG', 51.94), ('T', 24.79), ('UTX', 52.61), ('VZ', 29.26), ('WMT', 49.74), ('XOM', 69.35)])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices = {}\n",
+    "\n",
+    "with open('../../data/prices.csv') as f:\n",
+    "    next(f)\n",
+    "    for line in f:\n",
+    "        row = line.strip().replace('\"', '').split(',')\n",
+    "        prices[row[0]] = float(row[1])\n",
+    "        \n",
+    "prices['CVX']\n",
+    "prices.keys()\n",
+    "prices.values()\n",
+    "prices.items()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 딕셔너리 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices.get('IBM', 0.0)\n",
+    "prices.get('SCOX', 0.0)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 복합 키(composite keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Programmer's day\""
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 파이썬에서는 어떤 타입의 값이든 딕셔너리의 키로 사용할 수 있다. 딕셔너리 키는 반드시 변경불가능한 타입이어야 한다\n",
+    "holidays = {\n",
+    "    (1, 1): 'New Years',\n",
+    "    (3, 14): 'Pi day',\n",
+    "    (9, 13): \"Programmer's day\"\n",
+    "}\n",
+    "holidays\n",
+    "\n",
+    "holidays[3, 14]\n",
+    "holidays[9,13]\n",
+    "\n",
+    "# 리스트, 세트, 다른 딕셔너리는 변경 가능(mutable)하므로 딕셔너리의 키로 사용할 수 없다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 세트(set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AAPL', 'CAT', 'GOOG', 'IBM'}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 세트는 고유 항목의 모음이며 순서를 유지하지 않는다\n",
+    "tech_stocks = {'IBM', 'AAPL', 'MSFT'}\n",
+    "tech_stocks = set(['IBM', 'AAPL', 'MSFT'])\n",
+    "type(tech_stocks)\n",
+    "tech_stocks\n",
+    "\n",
+    "\n",
+    "# 세트는 멤버십 테스트에 유용함.\n",
+    "'IBM' in tech_stocks\n",
+    "'FB' in tech_stocks\n",
+    "\n",
+    "\n",
+    "# 세트는 중복 제거에도 유용하다.\n",
+    "names = ['IBM', 'AAPL', 'GOOG', 'IBM', 'GOOG', 'YHOO']\n",
+    "unique = set(names)\n",
+    "unique\n",
+    "\n",
+    "unique.add('CAT')\n",
+    "unique\n",
+    "\n",
+    "unique.remove('YHOO')\n",
+    "unique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 연습 문제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 연습 문제 2.4: 튜플의 리스트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ../../data/portfolio.csv 파일에는 포트폴리오에 편입된 주식 목록이 있다. \n",
+    "# 연습 문제 1.30에서, 우리는 이 파일을 읽고 간단한 계산을 수행하는 portfolio_cost(filename) 함수를 작성했다.\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''포트폴리오 파일의 총 비용(주식수*가격)을 계산'''\n",
+    "    total_cost = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows)\n",
+    "        for row in rows:\n",
+    "            nshares = int(row[1])\n",
+    "            price = float(row[2])\n",
+    "            total_cost += nshares * price\n",
+    "    return total_cost\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'44,671.15'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 위 코드를 참고해, 새로운 report.py 파일을 생성하라. \n",
+    "# 그 파일에서, 주어진 포트폴리오 파일을 열고 내용을 읽어 튜플의 리스트를 생성하는 \n",
+    "# read_portfolio(filename) 함수를 정의한다. 이를 위해, 위의 코드를 약간 수정해야 한다.\n",
+    "\n",
+    "import csv \n",
+    "\n",
+    "def read_portfolio(filename):\n",
+    "    portfolio = []\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows)\n",
+    "        for row in rows:\n",
+    "            holding = (row[0], int(row[1]), float(row[2]))\n",
+    "            portfolio.append(holding)\n",
+    "    return portfolio\n",
+    "                                   \n",
+    "portfolio = read_portfolio('../../data/portfolio.csv')\n",
+    "portfolio[0]\n",
+    "portfolio[0][0]\n",
+    "\n",
+    "total = 0.0\n",
+    "for i in portfolio:\n",
+    "    total += i[1] * i[2]\n",
+    "f'{total:,.2f}'    \n",
+    "\n",
+    "portfolio\n",
+    "total = 0.0\n",
+    "for name, nshares, price in portfolio:\n",
+    "    total += nshares * price\n",
+    "f'{total:,.2f}'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 연습 문제 2.5: 딕셔너리의 리스트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'AA', 'shares': 100, 'price': 32.2}, {'name': 'IBM', 'shares': 50, 'price': 91.1}, {'name': 'CAT', 'shares': 150, 'price': 83.44}, {'name': 'MSFT', 'shares': 200, 'price': 51.23}, {'name': 'GE', 'shares': 95, 'price': 40.37}, {'name': 'MSFT', 'shares': 50, 'price': 65.1}, {'name': 'IBM', 'shares': 100, 'price': 70.44}]\n",
+      "------------------------------------------------------------\n",
+      "[{'name': 'AA', 'price': 32.2, 'shares': 100},\n",
+      " {'name': 'IBM', 'price': 91.1, 'shares': 50},\n",
+      " {'name': 'CAT', 'price': 83.44, 'shares': 150},\n",
+      " {'name': 'MSFT', 'price': 51.23, 'shares': 200},\n",
+      " {'name': 'GE', 'price': 40.37, 'shares': 95},\n",
+      " {'name': 'MSFT', 'price': 65.1, 'shares': 50},\n",
+      " {'name': 'IBM', 'price': 70.44, 'shares': 100}]\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연습 문제 2.4에서 작성한 함수를 수정해, 포트폴리오에 있는 주식을 \n",
+    "# 튜플 대신 딕셔너리로 나타내게 해 보자. \n",
+    "# 이 딕셔너리에서 입력 파일의 컬럼들을 나타내기 위해, \n",
+    "# 각각 \"name\", \"shares\", \"price\"라는 필드명을 사용한다.\n",
+    "\n",
+    "# 이 함수를 연습 문제 2.4에서 했던 것과 같은 방식으로 실험해 보라.\n",
+    "\n",
+    "import csv \n",
+    "\n",
+    "def read_portfolio(filename):\n",
+    "    portfolio = []\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows)\n",
+    "        for row in rows:\n",
+    "            holding = {'name':row[0], 'shares':int(row[1]), 'price': float(row[2])}\n",
+    "            portfolio.append(holding)\n",
+    "    return portfolio\n",
+    "                                   \n",
+    "portfolio = read_portfolio('../../data/portfolio.csv')\n",
+    "portfolio\n",
+    "\n",
+    "portfolio[0]['name']\n",
+    "portfolio[0]['shares']\n",
+    "portfolio[0]['price']\n",
+    "\n",
+    "total = 0.0\n",
+    "for i in portfolio:\n",
+    "    total += i['shares'] * i['price']\n",
+    "f'Total {total:,.2f}'\n",
+    "\n",
+    "print(portfolio)\n",
+    "print('-'*60)\n",
+    "\n",
+    "\n",
+    "from pprint import pprint\n",
+    "pprint(portfolio)\n",
+    "print('-'*60)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -547,7 +1017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -561,9 +1031,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
