20230327 Home Review Python

--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/1. 파이썬 소개.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/1. 파이썬 소개.ipynb
@@ -85,46 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Days:   1, Num Bills:          1, Bills Height:    0.00011\n",
-      "Days:   2, Num Bills:          2, Bills Height:    0.00022\n",
-      "Days:   3, Num Bills:          4, Bills Height:    0.00044\n",
-      "Days:   4, Num Bills:          8, Bills Height:    0.00088\n",
-      "Days:   5, Num Bills:         16, Bills Height:    0.00176\n",
-      "Days:   6, Num Bills:         32, Bills Height:    0.00352\n",
-      "Days:   7, Num Bills:         64, Bills Height:    0.00704\n",
-      "Days:   8, Num Bills:        128, Bills Height:    0.01408\n",
-      "Days:   9, Num Bills:        256, Bills Height:    0.02816\n",
-      "Days:  10, Num Bills:        512, Bills Height:    0.05632\n",
-      "Days:  11, Num Bills:       1024, Bills Height:    0.11264\n",
-      "Days:  12, Num Bills:       2048, Bills Height:    0.22528\n",
-      "Days:  13, Num Bills:       4096, Bills Height:    0.45056\n",
-      "Days:  14, Num Bills:       8192, Bills Height:    0.90112\n",
-      "Days:  15, Num Bills:      16384, Bills Height:    1.80224\n",
-      "Days:  16, Num Bills:      32768, Bills Height:    3.60448\n",
-      "Days:  17, Num Bills:      65536, Bills Height:    7.20896\n",
-      "Days:  18, Num Bills:     131072, Bills Height:   14.41792\n",
-      "Days:  19, Num Bills:     262144, Bills Height:   28.83584\n",
-      "Days:  20, Num Bills:     524288, Bills Height:   57.67168\n",
-      "Days:  21, Num Bills:    1048576, Bills Height:  115.34336\n",
-      "Days:  22, Num Bills:    2097152, Bills Height:  230.68672\n",
-      "Number of days:  23\n",
-      "Number of bills: 4194304, WON : 5452595200\n",
-      "Final height:  461.37344\n"
+      "Writing ../../test_bed/bounce.py\n"
      ]
     }
    ],
    "source": [
+    "%%writefile ../../test_bed/bounce.py\n",
     "# 어느 날 아침, 당신은 시카고의 시어스 타워(Sears tower) 근처를 거닐다가 보도에 1 달러 지폐를 한 장 올려뒀다. \n",
     "# 그 후 매일 외출할 때마다 그 위에 지폐를 얹어 탑을 쌓으며, 높이는 매일 두 배로 불어난다. \n",
     "# 돈으로 쌓은 탑의 높이가 시어스 타워의 높이와 같아지려면 시간이 얼마나 걸릴까?\n",
     "# ------------------------------------------------------------------------------------------------------\n",
+    "# bounce.py\n",
     "bill_thickness = 0.11 * 0.001  # mm 를 m 로 변환\n",
     "sears_height = 442             # 442m\n",
     "num_bills = 1\n",
@@ -518,33 +496,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56 150,310.16 462195.74\n",
-      "57 152,994.27 461437.45\n",
-      "58 155,678.38 460676.0\n",
-      "59 158,362.49 459911.37\n",
-      "60 161,046.60 459143.56\n",
-      "61 164,730.71 457372.55\n",
-      "62 168,414.82 455594.16\n",
-      "231 791,029.41 18770.95\n",
-      "232 794,713.52 15165.05\n",
-      "233 798,397.63 11544.13\n",
-      "234 802,081.74 7908.12\n",
-      "235 805,765.85 4256.96\n",
-      "236 809,449.96 590.59\n",
-      "237 813,134.07 -3091.06\n",
-      "Total paid: 813,134.07\n",
-      " Months: 237\n"
+      "Writing ../../test_bed/mortage.py\n"
      ]
     }
    ],
    "source": [
+    "%%writefile ../../test_bed/mortage.py\n",
     "# 월수, 현재까지의 납부액, 남은 원금을 나타내는 테이블을 프린트하게 프로그램을 수정해 보라. 다음과 같이 출력한다.\n",
     "# 1 2684.11 499399.22\n",
     "# 2 5368.22 498795.94\n",
@@ -2462,10 +2426,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ../../test_bed/pcost.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile ../../test_bed/pcost.py\n",
     "# 책에서 제시하는 해답\n",
     "import csv\n",
     "\n",
@@ -2735,7 +2708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
