--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/2. 데이터로 작업하기.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/2. 데이터로 작업하기.ipynb
@@ -853,6 +853,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2.5 collections 모듈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2.5 collections 모듈\n",
+    "# --------------------\n",
+    "# collections 모듈에는 데이터 처리를 위한 유용한 객체가 많이 있다. 그중 몇 가지를 간략히 소개한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 예: 카운트하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예: 카운트하기\n",
+    "# --------------\n",
+    "# 보유한 주식이 다음과 같을 때, 종목별로 합산해 나타내고 싶다고 하자.\n",
+    "\n",
+    "# portfolio = [\n",
+    "#     ('GOOG', 100, 490.1),\n",
+    "#     ('IBM', 50, 91.1),\n",
+    "#     ('CAT', 150, 83.44),\n",
+    "#     ('IBM', 100, 45.23),\n",
+    "#     ('GOOG', 75, 572.45),\n",
+    "#     ('AA', 50, 23.15)\n",
+    "# ]\n",
+    "# 위 리스트에 IBM과 GOOG가 두 개씩 있다. 종목별로 합산해 보자.\n",
+    "\n",
+    "\n",
+    "# Counter\n",
+    "#--------\n",
+    "# 해법: Counter를 사용한다.\n",
+    "\n",
+    "# from collections import Counter\n",
+    "# total_shares = Counter()\n",
+    "# for name, shares, price in portfolio:\n",
+    "#     total_shares[name] += shares\n",
+    "\n",
+    "# total_shares['IBM']     # 150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'GOOG': 175, 'IBM': 150, 'CAT': 150, 'AA': 50})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "portfolio = [\n",
+    "    ('GOOG', 100, 490.1),\n",
+    "    ('IBM', 50, 91.1),\n",
+    "    ('CAT', 150, 83.44),\n",
+    "    ('IBM', 100, 45.23),\n",
+    "    ('GOOG', 75, 572.45),\n",
+    "    ('AA', 50, 23.15)]\n",
+    "portfolio\n",
+    "\n",
+    "total_shares = Counter()\n",
+    "for name, shares, price in portfolio:\n",
+    "    total_shares[name] += shares\n",
+    "\n",
+    "print(total_shares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 예: 일대다(One-Many) 매핑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예: 일대다(One-Many) 매핑\n",
+    "# ------------------------\n",
+    "# 문제: 하나의 키를 여러 개의 값에 매핑하려고 한다.\n",
+    "\n",
+    "# portfolio = [\n",
+    "#     ('GOOG', 100, 490.1),\n",
+    "#     ('IBM', 50, 91.1),\n",
+    "#     ('CAT', 150, 83.44),\n",
+    "#     ('IBM', 100, 45.23),\n",
+    "#     ('GOOG', 75, 572.45),\n",
+    "#     ('AA', 50, 23.15)\n",
+    "# ]\n",
+    "# 앞의 예와 같이, IBM을 키로 삼으면 두 개의 튜플이 있다.\n",
+    "\n",
+    "# 해법: defaultdict를 사용한다.\n",
+    "\n",
+    "# from collections import defaultdict\n",
+    "# holdings = defaultdict(list)\n",
+    "# for name, shares, price in portfolio:\n",
+    "#     holdings[name].append((shares, price))\n",
+    "# holdings['IBM'] # [ (50, 91.1), (100, 45.23) ]\n",
+    "# defaultdict을 사용하면 키에 액세스할 때마다 기본값을 얻는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'GOOG': [(100, 490.1), (75, 572.45)],\n",
+       "             'IBM': [(50, 91.1), (100, 45.23)],\n",
+       "             'CAT': [(150, 83.44)],\n",
+       "             'AA': [(50, 23.15)]})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "holdings = defaultdict(list)\n",
+    "for name, shares, price in portfolio:\n",
+    "    holdings[name].append((shares, price))\n",
+    "holdings\n",
+    "#holdings['IBM']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 예: 이력을 유지하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예: 이력을 유지하기\n",
+    "# 문제: 마지막 N개의 이력(history)을 유지하고 싶다.\n",
+    "\n",
+    "# 해법: deque를 사용한다.\n",
+    "\n",
+    "# from collections import deque\n",
+    "\n",
+    "# history = deque(maxlen=N)\n",
+    "# with open(filename) as f:\n",
+    "#     for line in f:\n",
+    "#         history.append(line)\n",
+    "#         ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 연습 문제"
    ]
   },
