--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/5. 파이썬 객체의 내부 작동.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/5. 파이썬 객체의 내부 작동.ipynb
@@ -2571,7 +2571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2590,7 +2590,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
    }
   }
  },
