--- a/Programming/Python/Python 중급/실용 파이썬 프로그래밍/7. 고급 주제.ipynb
+++ b/Programming/Python/Python 중급/실용 파이썬 프로그래밍/7. 고급 주제.ipynb
@@ -2085,7 +2085,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
