20230403 Office Review Python

--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
@@ -320,19 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "print:  ['']\n",
-      "print:  ['', '', '', '', '홍길동', '800905-*******']\n",
-      "print:  ['', '', '', '', '고길동', '700905-*******']\n",
-      "print:  ['', '', '', '', '']\n",
-      "['', '    홍길동 800905-*******', '    고길동 700905-*******', '    ']\n",
-      "print:  \n",
+      "\n",
       "    홍길동 800905-*******\n",
       "    고길동 700905-*******\n",
       "    \n"
@@ -340,26 +335,12 @@
     }
    ],
    "source": [
+    "# text 함수를 이용한 벙법\n",
+    "# ----------------------\n",
     "text = \"\"\"\n",
     "    홍길동 800905-1049118\n",
     "    고길동 700905-1059119\n",
     "    \"\"\"\n",
-    "\n",
-    "# result = []\n",
-    "# for line in text.split('\\n'):\n",
-    "#     # print('print: ', line)\n",
-    "#     word_result = []\n",
-    "#     for word in line.split(' '):\n",
-    "#         if len(word) == 14 and word[:6].isdigit() and word[7:].isdigit():\n",
-    "#             word = word[:6] + '-' + '*******'\n",
-    "#         word_result.append(word)\n",
-    "#     result.append(' '.join(word_result))\n",
-    "\n",
-    "# result_data = '\\n'.join(result)\n",
-    "# print(result_data)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "result = []\n",
     "for line in text.split('\\n'):\n",
@@ -368,12 +349,17 @@
     "        if len(word) == 14 and word[:6].isdigit() and word[8:].isdigit():\n",
     "            word = word[:6] + '-' + '*' * 7\n",
     "        word_result.append(word)\n",
-    "    print('print: ', word_result)\n",
     "    result.append(' '.join(word_result))\n",
-    "print(result) \n",
     "\n",
     "result_data = '\\n'.join(result)\n",
-    "print('print: ', result_data)       \n"
+    "print(result_data)       \n",
+    "\n",
+    "\n",
+    "# 정규 표현식을 이용한 방법\n",
+    "# -----------------------\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
