--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,12 @@
       "\n",
       "    홍길동 800905-*******\n",
       "    고길동 700905-*******\n",
-      "    \n"
+      "    \n",
+      "<class 're.Pattern'>\n",
+      "\n",
+      "park 800905-*******\n",
+      "kim  700905-*******\n",
+      "\n"
      ]
     }
    ],
@@ -357,7 +362,15 @@
     "\n",
     "# 정규 표현식을 이용한 방법\n",
     "# -----------------------\n",
+    "import re\n",
     "\n",
+    "data = \"\"\"\n",
+    "park 800905-1049118\n",
+    "kim  700905-1059119\n",
+    "\"\"\"\n",
+    "pat = re.compile('(\\d{6})[-]\\d{7}')\n",
+    "print(type(pat))\n",
+    "print(pat.sub('\\g<1>-*******', data))\n",
     "\n",
     "\n"
    ]
