--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/01. 텍스트 다루기.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -346,12 +346,11 @@
     "    홍길동 800905-1049118\n",
     "    고길동 700905-1059119\n",
     "    \"\"\"\n",
-    "\n",
     "result = []\n",
     "for line in text.split('\\n'):\n",
     "    word_result = []\n",
     "    for word in line.split(' '):\n",
-    "        if len(word) == 14 and word[:6].isdigit() and word[8:].isdigit():\n",
+    "        if len(word) == 14 and word[:6].isdigit() and word[7:].isdigit():\n",
     "            word = word[:6] + '-' + '*' * 7\n",
     "        word_result.append(word)\n",
     "    result.append(' '.join(word_result))\n",
@@ -382,6 +381,7 @@
    "outputs": [],
    "source": [
     "# 풀이\n",
+    "# ----\n",
     "# 평범하게 이 문제를 해결하려면 다음과 같은 순서로 프로그램을 작성해야 한다.\n",
     "\n",
     "# 1. 공백 문자를 기준으로 전체 텍스트를 나눈다(split() 함수 사용).\n",
@@ -407,12 +407,55 @@
     "#         word_result.append(word)\n",
     "#     result.append(\" \".join(word_result))\n",
     "# print(\"\\n\".join(result))\n",
-    "# 이 프로그램을 실행한 결과는 다음과 같다.\n",
     "\n",
+    "# 이 프로그램을 실행한 결과는 다음과 같다.\n",
     "# c:\\projects\\pylib>python re_normal_sample.py\n",
     "# 홍길동의 주민 등록 번호는 800905-******* 입니다.\n",
     "# 그리고 고길동의 주민 등록 번호는 700905-******* 입니다.\n",
-    "# 그렇다면 누가 형님일까요?\n",
+    "# 그렇다면 누가 형님일까요?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ../../test_bed/re_normal_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../../test_bed/re_normal_sample.py\n",
+    "# re_normal_sample.py\n",
+    "\n",
+    "data = \"\"\"\n",
+    "홍길동의 주민번호는 800905-1049118 입니다. \n",
+    "그리고 고길동의 주민번호는 700905-1059119 입니다.\n",
+    "그렇다면 누가 형님일까요?\n",
+    "\"\"\"\n",
+    "result = []\n",
+    "for line in data.split('\\n'):\n",
+    "    word_result = []\n",
+    "    for word in line.split(' '):\n",
+    "        if len(word) == 14 and word[:6].isdigit() and word[7:].isdigit():\n",
+    "            word = word[:6] + '-' + '*' * 7\n",
+    "        word_result.append(word)\n",
+    "    result.append(' '.join(word_result))\n",
+    "result_data = '\\n'.join(result)\n",
+    "print(result_data)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# 하지만, re 모듈을 사용하면 더욱 간단하게 문제를 해결할 수 있다.\n",
     "\n",
     "# [파일명: re_sample.py]\n",
@@ -427,9 +470,11 @@
     "\n",
     "# pat = re.compile(\"(\\d{6})[-]\\d{7}\")\n",
     "# print(pat.sub(\"\\g<1>-*******\", data))\n",
+    "\n",
     "# 프로그램을 실행한 결과는 앞서 본 풀이의 결과와 같다.\n",
     "\n",
-    "# re.compile(\"(\\d{6})[-]\\d{7}\")에서 사용한 (\\d{6})[-]\\d{7}과 같은 문자열을 정규표현식이라 한다. 이 정규표현식의 의미는 다음과 같다.\n",
+    "# re.compile(\"(\\d{6})[-]\\d{7}\")에서 사용한 (\\d{6})[-]\\d{7}과 같은 문자열을 정규표현식이라 한다. \n",
+    "# 이 정규표현식의 의미는 다음과 같다.\n",
     "\n",
     "# 숫자6 + 붙임표(-) + 숫자7 (단, 숫자6은 괄호를 사용하여 그룹으로 지정했다.)\n",
     "# 즉, 주민 등록 번호와 일치하는 정규표현식이다. 이 정규표현식을 이용하여 re.compile() 함수로 만든 객체에 sub() 함수를 사용하면 이 식과 일치하는 문자열 일부분을 *로 바꿀 수 있다.\n",
@@ -440,11 +485,39 @@
     "# re - 정규식 연산: https://docs.python.org/ko/3/library/re.html\n",
     "# 정규표현식 더 알아보기: https://wikidocs.net/1669\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ../../test_bed/re_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../../test_bed/re_sample.py\n",
+    "import re\n",
+    "\n",
+    "data = \"\"\"\n",
+    "홍길동의 주민번호는 800905-1049118 입니다. \n",
+    "그리고 고길동의 주민번호는 700905-1059119 입니다.\n",
+    "그렇다면 누가 형님일까요?\n",
+    "\"\"\"\n",
+    "\n",
+    "pat = re.compile(\"(\\d{6})[-]\\d{7}\")\n",
+    "result_data = pat.sub(\"\\g<1>-*******\", data)\n",
+    "print(result_data)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -458,12 +531,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
    }
   }
  },
