--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/06 . 파일과 디렉터리 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/06 . 파일과 디렉터리 다루기.ipynb
@@ -486,7 +486,10 @@
     "\n",
     "# for x in fd.diff_files:\n",
     "#     print(\"x: %s\" % x)\n",
-    "# 먼저 fd = filecmp.dircmp('a', 'b')처럼 a, b 디렉터리를 비교하고자 fd 객체를 생성한다. 그리고 a 디렉터리에만 있는 파일은 fd.left_only, b 디렉터리에만 있는 파일은 fd.right_only, 두 곳 모두에 있지만 내용이 다른 파일은 fd.diff_files로 구할 수 있다.\n",
+    "\n",
+    "# 먼저 fd = filecmp.dircmp('a', 'b')처럼 a, b 디렉터리를 비교하고자 fd 객체를 생성한다. \n",
+    "# 그리고 a 디렉터리에만 있는 파일은 fd.left_only, b 디렉터리에만 있는 파일은 fd.right_only, \n",
+    "# 두 곳 모두에 있지만 내용이 다른 파일은 fd.diff_files로 구할 수 있다.\n",
     "\n",
     "# 참고\n",
     "# filecmp- 파일과 디렉터리 비교: https://docs.python.org/ko/3/library/filecmp.html"
@@ -518,16 +521,309 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 039 임시로 만든 파일을 이용하려면? ― tempfile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 039 임시로 만든 파일을 이용하려면? ― tempfile\n",
+    "# ---------------------------------------------\n",
+    "# tempfile은 임시 파일을 만들 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# ---\n",
+    "# 다음은 파일 객체를 입력으로 받아 해당 파일 각 줄의 숫자를 모두 더하고 나서 그 수를 반환하는 sumfile() 함수이다.\n",
+    "\n",
+    "# def sumfile(f):\n",
+    "#     result = 0\n",
+    "#     for line in f.readlines():\n",
+    "#         num = int(line)\n",
+    "#         result += num\n",
+    "#     return result\n",
+    "\n",
+    "# 1~100 사이의 숫자 10개를 무작위로 생성하여 줄 단위로 임시 파일에 기록한 후 sumfile() \n",
+    "# 함수를 이용하여 그 숫자의 합을 출력하는 프로그램은 어떻게 작성해야 할까? \n",
+    "# 단, 생성한 파일은 함수 실행 후 삭제해야 한다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "with open('/temp/test.txt', 'wt') as f:\n",
+    "    for data in random.sample(range(1, 101), 10):\n",
+    "        f.write(f'{data}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "575\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumfile(f):\n",
+    "    result = 0\n",
+    "    for line in f.readlines():\n",
+    "        num = int(line)\n",
+    "        result += num\n",
+    "    return result\n",
+    "\n",
+    "with open('/temp/test.txt', 'rt') as f:\n",
+    "    result = sumfile(f)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# ----\n",
+    "# 무작위로 숫자를 생성할 때는 random.randint() 함수를 사용하고 파일을 임시로 생성할 때는 tempfile을 사용한다.\n",
+    "\n",
+    "# 참고: 021 로또 번호를 뽑으려면? - random\n",
+    "\n",
+    "# [파일명: tempfile_sample.py]\n",
+    "\n",
+    "# import random\n",
+    "# import tempfile\n",
+    "\n",
+    "\n",
+    "# def sumfile(f):\n",
+    "#     result = 0\n",
+    "#     for line in f.readlines():\n",
+    "#         num = int(line)\n",
+    "#         result += num\n",
+    "#     return result\n",
+    "\n",
+    "\n",
+    "# tf = tempfile.TemporaryFile(mode='w+')\n",
+    "# for i in range(10):\n",
+    "#     num = random.randint(1, 100)\n",
+    "#     tf.write(str(num))\n",
+    "#     tf.write(\"\\n\")\n",
+    "\n",
+    "# tf.seek(0)  # 파일 오프셋을 처음으로 이동\n",
+    "# result = sumfile(tf)\n",
+    "# tf.close()\n",
+    "\n",
+    "# print(result)\n",
+    "\n",
+    "# tf = tempfile.TemporaryFile(mode='w+')처럼 tempfile 모듈을 사용하면 임시 파일을 쉽게 만들 수 있다. \n",
+    "# mode='w+'는 쓰기와 읽기를 위해 파일을 생성한다는 의미이다. \n",
+    "# 여기서는 무작위로 생성한 10개의 숫자를 파일에 써야 하고, 또 sumfile() 함수에서는 파일을 읽어야 하므로 mode='w+'를 사용하였다. \n",
+    "# 파일 쓰기가 끝나면 파일의 오프셋(offset)이 파일의 끝을 가리키므로 tf.seek(0)를 수행하여 처음부터 파일을 읽을 수 있도록 했다. \n",
+    "# 임시 파일은 tf.close()가 수행되거나 파이썬 프로세스가 종료되면 자동으로 삭제된다.\n",
+    "\n",
+    "# 알아두면 좋아요\n",
+    "# NamedTemporaryFile()\n",
+    "# --------------------\n",
+    "# TemporaryFile() 대신 NamedTemporaryFile()을 사용하면 생성되는 임시 파일에 파일 시스템에서 볼 수 있는 이름이 반드시 붙게 된다. \n",
+    "# 예를 들어 유닉스에서는 앞 코드의 tf.close()가 실행되기 전에 input()과 같은 사용자 입력 대기 명령줄을 추가하면 사용자 입력이 되어 \n",
+    "# 프로그램이 종료되기 전에 /tmp 디렉터리에 생성된 임시 파일을 눈으로 확인할 수 있다. \n",
+    "# NamedTemporaryFile()은 이 점만 제외하면 TemporaryFile()과 기능이 똑같다.\n",
+    "\n",
+    "# 참고\n",
+    "# tempfile - 임시 파일과 디렉터리 생성: https://docs.python.org/ko/3/library/tempfile.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "348\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import tempfile\n",
+    "\n",
+    "def sumfile(f):\n",
+    "    result = 0\n",
+    "    for line in f.readlines():\n",
+    "        num = int(line)\n",
+    "        result += num\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "rand_num = random.sample(range(1,101), 6)\n",
+    "with tempfile.TemporaryFile(mode='w+') as tf:\n",
+    "    for data in rand_num:\n",
+    "        tf.write(f'{data}\\n')\n",
+    "    tf.seek(0)\n",
+    "    result = sumfile(tf)\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import tempfile\n",
+    "import time\n",
+    "\n",
+    "def sumfile(f):\n",
+    "    result = 0\n",
+    "    for line in f.readlines():\n",
+    "        num = int(line)\n",
+    "        result += num\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "rand_num = random.sample(range(1,101), 6)\n",
+    "with tempfile.NamedTemporaryFile(mode='w+') as tf:\n",
+    "    for data in rand_num:\n",
+    "        tf.write(f'{data}\\n')\n",
+    "    tf.seek(0)\n",
+    "    result = sumfile(tf)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 040 파일을 찾으려면? ― glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 040 파일을 찾으려면? ― glob\n",
+    "# ---------------------------\n",
+    "# glob는 패턴(유닉스 셸이 사용하는 규칙)을 이용하여 파일을 검색할 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# ----\n",
+    "# 특정 디렉터리에 어떤 텍스트 파일이 있는지 확인하고자 한다. \n",
+    "# 이를 위해 현재 디렉터리와 하위 디렉터리의 모든 텍스트 파일(*.txt)을 찾아 해당 파일명을 출력하려면 어떻게 프로그램을 작성해야 할까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\\00. 들어가기 전에.ipynb\n",
+      ".\\01. 텍스트 다루기.ipynb\n",
+      ".\\02. 바이너리 데이터 다루기.ipynb\n",
+      ".\\03. 다양한 데이터 다루기.ipynb\n",
+      ".\\04. 수학과 숫자 다루기.ipynb\n",
+      ".\\05. 함수형 프로그래밍 다루기.ipynb\n",
+      ".\\06 . 파일과 디렉터리 다루기.ipynb\n",
+      ".\\test_bed\\03. 다양한 데이터 다루기.ipynb\n",
+      ".\\test_bed\\04. 수학과 숫자 다루기.ipynb\n",
+      ".\\test_bed\\05. 함수형 프로그래밍 다루기.ipynb\n",
+      ".\\test_bed\\06 . 파일과 디렉터리 다루기.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "\n",
+    "for filename in glob.glob('./**/*.ipynb', recursive=True):\n",
+    "    print(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# ----\n",
+    "# 다음은 glob 모듈을 사용한 문제 풀이이다.\n",
+    "\n",
+    "# [파일명: glob_sample.py]\n",
+    "\n",
+    "# import glob\n",
+    "\n",
+    "# for filename in glob.glob(\"**/*.txt\", recursive=True):\n",
+    "#     print(filename)\n",
+    "# 여기서 사용한 **/*.txt 패턴과 recursive=True는 하위 경로를 포함한 모든 텍스트 파일을 검색한다는 뜻이다. \n",
+    "# 만약 현재 디렉터리의 텍스트 파일만 검색하려면 *.txt 패턴을 사용하면 된다.\n",
+    "\n",
+    "# **/*.txt와 같은 재귀 패턴은 파이썬 3.5 버전부터 사용할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test1.txt\n",
+      "test2.txt\n",
+      "test3.txt\n",
+      "test4.txt\n",
+      "archive\\test1.txt\n",
+      "archive\\test2.txt\n",
+      "archive\\test3.txt\n",
+      "archive\\test4.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "\n",
+    "for filename in glob.glob(\"**/*.txt\", recursive=True):\n",
+    "    print(filename)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -541,9 +837,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
